# spamfilter

./: LICENSE  README.md  filter.py  pyproject.toml
src/spamfilter/: __init__.py  classifier.py  utils.py
src/tests/: test_classifier.py  test_utils.py
