[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spamfilter"

include = [
    "src/spamfilter/**"
]

version = "0.0.1"

authors = [
  { name="Aaron Castillo", email="aaroncastillo@imperial.ac.uk" }
]

description = "Package that contains all necessary elements to create a Naive Bayes classifier along with extra cleansing functionalities."

readme = "README.md"

requires-python = ">=3.7"

dependencies = [
"numpy>=1.18.4",
"pandas>=1.0.3",

]

licence="MIT"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]

addopts = [
    "--import-mode=importlib",
]

[project.urls]
"Homepage" = "https://github.com/amcm329/spamfilter/"
"Bug Tracker" = "https://github.com/amcm329/spamfilter/"
